<fix>[Create The FAQ'S Section]:<JavaScript Features> [   1.Fix problem with the drop down Features     - create a counter inside the html     - in each interaction add one to the single element       - show and close the answer ]

--- a/CSS/index.css
+++ b/CSS/index.css
@@ -387,7 +387,7 @@ section.six{
   flex-direction: column;
   gap: var(--fs-md);
 }
-/* .ask-questions li[data-active] .answer{
+.ask-questions li[data-active] .answer{
   z-index: 1;
   opacity: 1;
   transition: 200ms opacity ;
@@ -396,7 +396,7 @@ section.six{
 }
 .ask-questions li[data-active] i[data-drop-down-icon]{
   color: red;
-} */
+} 
 .drop-down-container{
   display: flex;
   color: white;
