<Feat>[Create The Footer Headline Section ]:<Style It> [   - Section One   - Section Two     - Change The Space Between     - Change The Gaps     - Add The Contacts To The Part Two And Create A Div For The Links     - Change The Size Of The Letter
]

--- a/CSS/Media-Queries.css
+++ b/CSS/Media-Queries.css
@@ -62,6 +62,11 @@
     section.five .part-content{
       min-height: 95rem;
     }
+    .footer-logo{
+      width: 45rem;
+    }
+
+
   
   }
   /*x1 1,5 */
@@ -93,6 +98,13 @@
     section.five .part-content{
       min-height: 65rem;
     }
+    footer div .section.one{
+      width: 22%;
+    }
+    .footer-logo{
+      width: 35rem;
+    }
+
   
 } 
 
