--- a/CSS/index.css
+++ b/CSS/index.css
@@ -50,13 +50,29 @@ header {
 }
 
 nav{
-  flex-shrink: 0;
   display: flex;
+  align-items: center;
+}
+.desktop-menu{
+  flex-shrink: 0;
   flex-wrap: nowrap;
   justify-content: space-between;
+ 
+}
+.mobile-menu{
+  display: none;
+  position: relative;
+  z-index: 999;
+  min-height: 100vh;
+  flex-direction: column;
+  justify-content: flex-start;
+  gap: var(--fs-lg);
+  
+}
+.mobile-menu ul{
+  flex-direction: column;
   align-items: center;
-
-
+  
 }
 
 ul{
@@ -86,6 +102,7 @@ a{
   padding-top: 0.5em;
   color: white;
 }
+
 .hero{
   display: flex;
   flex-direction: column;
