<Feat>[Create The Home Page]:<Clean Code> {   1. Hero     - Html       - change names       - Remove empty spaces       - Fix Tags     - css       -get rid off useless attributes       -Fix the attributes }

--- a/CSS/Media-Queries.css
+++ b/CSS/Media-Queries.css
@@ -219,7 +219,7 @@
   .logo{
     width:12rem ;
   }
-  nav .links{
+  nav .desktop-links{
     display: none;
   }
   i.fa-solid.fa-bars {
@@ -236,7 +236,7 @@
   .hero-text{
     width: 100%;
   }
-  .sub-sell-phrase{
+  .sub-hero-headline{
     font-size: var(--fs-md);
   }
 
