--- a/CSS/about-us.css
+++ b/CSS/about-us.css
@@ -1,103 +1,71 @@
-html{
-  font-size: 62.5%;
+header{
+  position: relative;
 }
-
-:root{
-  --fs-400:4rem;
-  --fs-300:3rem;
-  --fs-250:2.5rem;
-  --fs-200:2rem;
-  
+.hero-content.about-us{
+  min-height: 55vh;
 }
-
-
-*{
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: Montserrat, sans-serif;
-
-}
-body{
-  width: 100%;
-  background-color: black;
-}
-.container{
-  /* border:5px solid black; */
-  padding: 0 var(--fs-400);
-}
-
-.hero {
+.hero-text-about-us{
+  min-width: 60vh;
   display: flex;
   flex-direction: column;
-  flex-grow: 1;
-  min-height: 100vh;
-  min-height: 100svh;
-  color:white;
-  background-color: #5f1b17;
-  background-color: black;
-}
-.links{
-  display: flex;
-  flex-wrap: nowrap;
-  justify-content: space-between;
-  align-items: center;
-
-}
-.logo-container {
-  background-blend-mode: multiply;
-}
-
-.logo{
-  width: 15%;
-}
-
-nav{
-  flex-shrink: 0;
-
-}
-
-ul{
-  display: flex;
-  gap:var(--fs-200);
-}
-
-li{
-  display: flex;
-  list-style: none;
-  font-size: var(--fs-250);
-  
-}
-li:hover{
-  font-weight: 300;
-  text-shadow: 0 0 20px;
-  transition: 0.5s;
-}
-a{ 
-  text-decoration: none;
-  color: inherit;
-}
-#search-icon{
-  padding-top: 0.5em;
-}
-#cost{
- color: white;
-
-}
-.hero-content {
-  display: flex;
-  flex-grow: 1;
+  justify-content: center;
   align-items: center;
   text-align: center;
-  justify-content: center;
-  gap: var(--fs-400);
-  padding: 2rem;
+  gap: var(--fs-lg);
+}
 
+.wave {
+  background: url(../Images/wave.png);
+  background-size: 1000px 50px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 50px;
+  animation:wave 3s linear infinite;
 }
-#headline{
-  font-size: var(--fs-400);
-  display: flex;
-  font-weight: bold; 
-  width: 40ch; 
+@keyframes wave {
+  0%{
+    background-position-x: 0;
+  }
+  100%{
+    background-position-x: 1000px;
+  }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
