<Feat>[Create The About Us Page ]:<Create Style And Format The About Us Page> [   1.Create Hero     -Add Header     -Add Subheader     -Add Wave Animation   2.Create Content     1.Who We Are       -Add Header       -Add Article         -Add text         -Add Image     2.Why We Create       -Add Header       -Add Article         -Add Text         -Add Columns With Text     3.Helps Us Growth       -Add Header       -Add Article         -Add Divs           -Add Header & Text     4.Visit Us       -Add Header       -Add Article         -Add Image         -Add Maps ]

--- a/CSS/Media-Queries.css
+++ b/CSS/Media-Queries.css
@@ -190,6 +190,11 @@
       width:19rem ;
     }
 
+
+    .why-we-exist article div{
+      grid-template-columns: repeat(auto-fit,minMax(300px,1fr));
+    }
+
    
 
   
@@ -236,28 +241,20 @@
   .call-to-action{
     width:100%;
   }
-  .hero-image-desktop {
+  .desktop-image {
     display: none;
   }
-  .hero-image-mobile{
+  .mobile-image{
     display: inline;
     width:100%;
   }
   .call-to-action{
     font-size: var(--fs-md);
   }
-  .information img {
-    display: none;
-  }
   .information-text .main-pain-point {
     display: flex;
     align-items: center;
     gap: var(--fs-md);
-  }
-  .information span img{
-    display: inline;
-    width: 100%;
-
   }
   .cards-container{
     gap: var(--fs-2xl);
@@ -402,7 +399,9 @@
   }
  
 
-
+  .why-we-exist article div {
+    flex-direction: column;
+  }
 
 
 
@@ -425,6 +424,14 @@
   section.five .part-content .carousel{
     min-height: 50rem;
   }
+
+
+  .visit-us article div img{
+    width:100%;
+  }
+  .visit-us article div iframe{
+    width:100%;
+    height: 400px;
 }
 
 @media(max-width:650px){
@@ -468,6 +475,11 @@
   section.five .part-content .carousel .slide span{
     width:80%;
   }
+ 
+  .future-vision article div{
+    flex-wrap: wrap;
+  }
+
  
 
 }
@@ -514,6 +526,14 @@
   .button.preview{
     left: 6rem ;
   }
+
+
+  .visit-us article div iframe{
+    height:250px;
+  }
+
+
+
 
 
 }
