<Feat>[Create The Catalogue Page]:<Make It Responsive> [   1.Cut the images   2.Add responsive grid-template-columns   3.Make the call to actions always take the res of the space and the tet align it to the center ]

--- a/CSS/about-us.css
+++ b/CSS/about-us.css
@@ -23,7 +23,7 @@ header{
   gap: var(--fs-lg);
 }
 .wave-animation {
-  background: url(../Images/wave.png);
+  background: url('../Images/About-Us/wave.png');
   background-size: 1000px 50px;
   position: absolute;
   left: 0;
