--- a/CSS/Media-Queries.css
+++ b/CSS/Media-Queries.css
@@ -425,13 +425,13 @@
     min-height: 50rem;
   }
 
-
   .visit-us article div img{
     width:100%;
   }
   .visit-us article div iframe{
     width:100%;
     height: 400px;
+}
 }
 
 @media(max-width:650px){
@@ -555,6 +555,3 @@
  
 
 }
-  
-
-
