--- a/CSS/index.css
+++ b/CSS/index.css
@@ -15,7 +15,7 @@ html , body{
   margin: 0;
   padding: 0;
   font-family: Montserrat, sans-serif;
-  outline: 1px solid red;
+  /* outline: 1px solid red; */
 }
 body{
   background-color: #5f1b17;
@@ -262,17 +262,11 @@ img.testimony-client-photo{
   border-top-left-radius: 10px;
   border-bottom-left-radius: 50px;
   width: 40%;
-  background-image: url('/Images/Heroimage-one.jpeg');
+  background-image: url("../Images/Home/Features.jpg");
   background-position-x:center;
   background-position-y: center;
   background-size: cover;
 
-}
-.five .part-content img{
-  position: relative;
-  border-radius: 0px;
-  width: 40%;
-  z-index: -999;
 }
 .carousel{
   display: flex;
@@ -352,7 +346,7 @@ img.testimony-client-photo{
 }
 .our-physical-store {
   background-color: gray;
-  background-image: url('../Images/1000_F_177137562_N8tXCeC7CqOuAFqejdUnhQFvOzUQiDnw.jpg');
+  background-image: url('../Images/Home/Heroimage-one.jpeg');
   background-blend-mode: multiply;
   background-position-x: center;
   background-size: cover;
